--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 </head>
 <body>
     <video autoplay loop muted>
-        <source src="your-video-file.mp4" type="video/mp4">
+        <source src="https://i.imgur.com/zrWbgPd.mp4" type="video/mp4">
         Dein Browser unterstützt kein Video-Tag.
     </video>
     <audio id="background-music" autoplay loop>
-        <source src="your-music-file.mp3" type="audio/mpeg">
+        <source src="gardens-stylish-chill-303261.mp3" type="audio/mpeg">
         Dein Browser unterstützt kein Audio-Tag.
     </audio>
     <div class="container">
