--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     <div class="container">
         <h1>MagicWolfMC</h1>
         <div class="links">
-            <a href="https://discord.gg/YOURDISCORD" target="_blank">🎧 Discord</a>
-            <a href="https://shop.magicwolfmc.de" target="_blank">🛒 Shop</a>
+            <a href="https://discord.gg/rUfVsrV6" target="_blank">🎧 Discord</a>
+            <a href="kurs.html" target="_blank">🛒 KursRechner</a>
             <a href="minecraft://?addExternalServer=MagicWolfMC|play.magicwolfmc.de" target="_blank">🎮 Server beitreten</a>
         </div>
         <div class="music-controls">
