--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <a href="https://discord.gg/rUfVsrV6" target="_blank">🎧 Discord</a>
             <a href="kurs.html" target="_blank">🛒 KursRechner</a>
             <a href="minecraft://?addExternalServer=MagicWolfMC|play.magicwolfmc.de" target="_blank">🎮 Server beitreten</a>
+            <a href="spielersuche.html" target="_blank">🔍 Spielersuche</a>
         </div>
         <div class="music-controls">
             <button onclick="document.getElementById('background-music').play()">▶ Play</button>
