--- a/index.html
+++ b/index.html
@@ -90,15 +90,18 @@
     <header>
         <a href="spielersuche.html">🔍 Spielersuche</a>
         <a href="blog.html">📝 Blog</a>
+        <a href="news.html">📰 News</a>
+        <a href="designer.html">🎨 Designer</a>
+        <a href="farmen.html">🌱 Farmen</a>
     </header>
 
     <div class="container">
         <h1>MagicWolfMC</h1>
-        <p>Willkommen auf unserer Seite! Entdecke den Spielerserver und vieles mehr.</p>
+        <p>Willkommen auf unserer Seite! Entdecke den Magicwolfmc Server und vieles mehr.</p>
     </div>
     
     <footer>
-        &copy; 2025 MagicWolfMC - Alle Rechte vorbehalten | Erstelle von Tagwolf
+        &copy; 2025 MagicWolfMC - Alle Rechte vorbehalten | Erstellt von Tagwolf
     </footer>
 </body>
 </html>
