--- a/designer.html
+++ b/designer.html
@@ -68,10 +68,17 @@
     </style>
 </head>
 <body>
-
+    <video autoplay loop muted>
+        <source src="https://i.imgur.com/zrWbgPd.mp4" type="video/mp4">
+        Dein Browser unterstützt kein Video-Tag.
+    </video>
+    
     <header>
-        <a href="index.html">🏠 Startseite</a>
         <a href="spielersuche.html">🔍 Spielersuche</a>
+        <a href="blog.html">📝 Blog</a>
+        <a href="news.html">📰 News</a>
+        <a href="designer.html">🎨 Designer</a>
+        <a href="farmen.html">🌱 Farmen</a>
     </header>
 
     <div class="container">
