--- a/designer.html
+++ b/designer.html
@@ -13,6 +13,15 @@
             padding: 0;
             background: #1a1a1a;
         }
+        video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+        }
         header {
             position: absolute;
             top: 20px;
@@ -68,11 +77,13 @@
     </style>
 </head>
 <body>
+
     <video autoplay loop muted>
         <source src="https://i.imgur.com/zrWbgPd.mp4" type="video/mp4">
         Dein Browser unterstützt kein Video-Tag.
     </video>
-    
+
+
     <header>
         <a href="spielersuche.html">🔍 Spielersuche</a>
         <a href="blog.html">📝 Blog</a>
@@ -85,15 +96,13 @@
         <h1>Designer - MagicWolfMC</h1>
 
         <div class="designer-content">
-            <h2>Unsere Designer</h2>
-            <p>Unser Tagwolf der einzig wahre Website Designer! Wir danken ihn für seine Tätigkeiten im Team.</p>
-
-            <p>Wenn du Interesse hast, unser Team zu unterstützen, melde dich bei uns! Wir freuen uns immer über kreative Köpfe!</p>
+            <p>Unserer Designer tagwolf ist der beste!</p>
+            <p>Du möchtest Teil unseres Design-Teams werden? Melde dich bei uns! Wir freuen uns immer über kreative Köpfe!</p>
         </div>
     </div>
 
     <footer>
-        &copy; 2025 MagicWolfMC - Alle Rechte vorbehalten | Erstellt von Tagwolf
+        &copy; 2025 MagicWolfMC - Alle Rechte vorbehalten | Erstelle von Tagwolf
     </footer>
 
 </body>
