--- a/farmen.html
+++ b/farmen.html
@@ -13,6 +13,15 @@
             padding: 0;
             background: #1a1a1a;
         }
+        video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+        }
         header {
             position: absolute;
             top: 20px;
@@ -68,17 +77,15 @@
     </style>
 </head>
 <body>
+
     <video autoplay loop muted>
         <source src="https://i.imgur.com/zrWbgPd.mp4" type="video/mp4">
         Dein Browser unterstützt kein Video-Tag.
     </video>
-    
+
     <header>
+        <a href="index.html">🏠 Startseite</a>
         <a href="spielersuche.html">🔍 Spielersuche</a>
-        <a href="blog.html">📝 Blog</a>
-        <a href="news.html">📰 News</a>
-        <a href="designer.html">🎨 Designer</a>
-        <a href="farmen.html">🌱 Farmen</a>
     </header>
 
     <div class="container">
@@ -86,9 +93,9 @@
 
         <div class="farming-tips">
             <h2>Farmen auf MagicWolfMC</h2>
-            <p>Aktuell haben wir eine sehr große CommunitFarm auf dem Server. Bereitgestellt von BlackViper0809 & Manomania.</p>
+            <p>Unsere erste Community Farm ist von BlackViper0809 & Manomania.</p>
 
-            <p>Erkunde die farm mit /p v farm und mache dir deinen eignen Blick!</p>
+            <p>Erkunde die farm unter /p v farm <3 !</p>
         </div>
     </div>
 
