--- a/spielersuche.html
+++ b/spielersuche.html
@@ -11,102 +11,115 @@
             color: white;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             background: #1a1a1a;
-            overflow: hidden;
-            position: relative;
+        }
+        video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+        }
+        header {
+            position: absolute;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            justify-content: space-between;
+            width: 80%;
+            max-width: 1200px;
+        }
+        header a {
+            font-size: 1.2em;
+            color: white;
+            text-decoration: none;
+            font-weight: 600;
+            margin: 0 15px;
+            padding: 10px;
+            transition: 0.3s;
+        }
+        header a:hover {
+            text-decoration: underline;
         }
         .container {
             background: rgba(0, 0, 50, 0.8);
             padding: 40px;
+            margin-top: 100px;
             border-radius: 20px;
-            text-align: center;
             box-shadow: 0px 0px 20px rgba(0, 136, 255, 0.5);
-            animation: fadeIn 1.5s ease-in-out;
-            max-width: 500px;
+            max-width: 800px;
             width: 90%;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: scale(0.9); }
-            to { opacity: 1; transform: scale(1); }
+            margin-left: auto;
+            margin-right: auto;
         }
         h1 {
             font-size: 3.5em;
+            text-align: center;
             margin-bottom: 20px;
-            font-weight: 700;
-            text-shadow: 3px 3px 15px rgba(0, 136, 255, 0.5);
         }
-        .player-search {
-            margin-top: 30px;
+        .search-container {
+            text-align: center;
+        }
+        .search-container input, .search-container button {
             padding: 15px;
-            background: rgba(0, 0, 100, 0.8);
-            border-radius: 10px;
-            box-shadow: 0px 0px 15px rgba(0, 136, 255, 0.5);
-        }
-        .player-search input {
-            padding: 12px 18px;
             font-size: 1.1em;
-            width: 80%;
-            margin-right: 10px;
-            border: 2px solid #007bff;
             border-radius: 8px;
-            background-color: transparent;
-            color: white;
-            outline: none;
+            margin: 10px;
         }
-        .player-search button {
-            padding: 12px 18px;
-            font-size: 1.1em;
+        .search-container button {
             background: #007bff;
             color: white;
             border: none;
-            border-radius: 8px;
             cursor: pointer;
-            transition: 0.3s ease-in-out;
+            transition: 0.3s;
         }
-        .player-search button:hover {
+        .search-container button:hover {
             background: #0056b3;
-            transform: scale(1.05);
         }
-        .back-link {
-            margin-top: 30px;
-            display: block;
-            font-size: 1.2em;
-            color: #007bff;
-            text-decoration: none;
-            font-weight: 700;
-        }
-        .back-link:hover {
-            text-decoration: underline;
+        footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            padding: 10px;
+            background: rgba(0, 0, 50, 0.9);
+            color: white;
+            font-size: 1em;
         }
     </style>
 </head>
 <body>
+
     <video autoplay loop muted>
         <source src="https://i.imgur.com/zrWbgPd.mp4" type="video/mp4">
         Dein Browser unterstützt kein Video-Tag.
     </video>
-    
+
     <header>
-        <a href="spielersuche.html">🔍 Spielersuche</a>
+        <a href="index.html">🏠 Startseite</a>
         <a href="blog.html">📝 Blog</a>
         <a href="news.html">📰 News</a>
         <a href="designer.html">🎨 Designer</a>
         <a href="farmen.html">🌱 Farmen</a>
     </header>
-    <script>
-        function searchPlayer() {
-            const playerName = document.getElementById('player-search-input').value;
-            if (playerName) {
-                alert('Suche nach dem Spieler: ' + playerName);
-                // Hier könnte man eine API oder eine Datenbankabfrage einfügen, um die Suche zu realisieren
-            } else {
-                alert('Bitte einen Spielernamen eingeben!');
-            }
-        }
-    </script>
+
+    <div class="container">
+        <h1>Spielersuche - MagicWolfMC</h1>
+
+        <div class="search-container">
+            <h2>Finde einen Mitspieler!</h2>
+            <p>Gib deinen Namen ein und suche nach Spielern, mit denen du spielen kannst:</p>
+            <input type="text" placeholder="Spielername suchen...">
+            <button>🔍 Suchen</button>
+        </div>
+    </div>
+
+    <footer>
+        &copy; 2025 MagicWolfMC - Alle Rechte vorbehalten | Erstelle von Tagwolf
+    </footer>
+
 </body>
 </html>
